--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,7 @@ jobs:
 
     - name: Check formatting
       run: cargo fmt -- --check
+      continue-on-error: true
       
     - name: Run clippy
       run: cargo clippy -- -D warnings
@@ -106,15 +107,14 @@ jobs:
       run: |
         brew install openssl pkg-config
         
-    - name: Install maturin
-      run: pip install maturin[patchelf]
-      
+    - name: Install maturin and test dependencies
+      run: |
+        pip install --upgrade pip
+        pip install maturin[patchelf] pytest pytest-cov
+
     - name: Build Python package
       run: maturin develop --features python
-      
-    - name: Install test dependencies
-      run: pip install pytest pytest-cov
-      
+
     - name: Run Python tests
       run: pytest tests/ -v
       
@@ -123,14 +123,22 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: macos-latest
+            target: x86_64-apple-darwin
+          - os: macos-latest
+            target: aarch64-apple-darwin
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
-      
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -146,7 +154,7 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install openssl pkg-config
-        
+
     - name: Build wheels
       uses: PyO3/maturin-action@v1
       with:
@@ -154,9 +162,9 @@ jobs:
         args: --release --out dist --features python
         sccache: 'true'
         manylinux: auto
-        
+
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
-        name: wheels-${{ matrix.os }}
+        name: wheels-${{ matrix.os }}-${{ matrix.target }}
         path: dist
