--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ thiserror = "1.0.69"
 # Python bindings (optional)
 pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
 
+[dev-dependencies]
+tempfile = "3.8"
+
 [features]
 default = []
 python = ["pyo3"]
