--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install openssl pkg-config
+        echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
     - name: Build wheels
       uses: PyO3/maturin-action@v1
