--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,13 +84,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-          - os: macos-latest
-            target: x86_64-apple-darwin
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -117,10 +111,18 @@ jobs:
         echo "Windows build - using default dependencies"
 
     - name: Build binary
-      run: cargo build --release --target ${{ matrix.target }}
+      run: cargo build --release
 
-    - name: Upload binary
+    - name: Upload binary (Unix)
+      if: matrix.os != 'windows-latest'
       uses: actions/upload-artifact@v4
       with:
-        name: binary-${{ matrix.os }}-${{ matrix.target }}
-        path: target/${{ matrix.target }}/release/annorefine*
+        name: binary-${{ matrix.os }}
+        path: target/release/annorefine
+
+    - name: Upload binary (Windows)
+      if: matrix.os == 'windows-latest'
+      uses: actions/upload-artifact@v4
+      with:
+        name: binary-${{ matrix.os }}
+        path: target/release/annorefine.exe
