remove windows builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         rust: [stable]
 
     steps:
@@ -84,7 +84,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -104,25 +104,13 @@ jobs:
         brew install openssl pkg-config
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
-    - name: Install system dependencies (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        # Windows dependencies are typically handled by vcpkg or pre-built
-        echo "Windows build - using default dependencies"
+
 
     - name: Build binary
       run: cargo build --release
 
-    - name: Upload binary (Unix)
-      if: matrix.os != 'windows-latest'
+    - name: Upload binary
       uses: actions/upload-artifact@v4
       with:
         name: binary-${{ matrix.os }}
         path: target/release/annorefine
-
-    - name: Upload binary (Windows)
-      if: matrix.os == 'windows-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: binary-${{ matrix.os }}
-        path: target/release/annorefine.exe
