--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -76,7 +76,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -99,19 +99,11 @@ jobs:
     - name: Build binary
       run: cargo build --release
 
-    - name: Upload binary (Unix)
-      if: matrix.os != 'windows-latest'
+    - name: Upload binary
       uses: actions/upload-artifact@v4
       with:
         name: binary-${{ matrix.os }}
         path: target/release/annorefine
-
-    - name: Upload binary (Windows)
-      if: matrix.os == 'windows-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: binary-${{ matrix.os }}
-        path: target/release/annorefine.exe
 
   release-github:
     name: Create GitHub Release
