--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,11 @@ jobs:
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
     - name: Install system dependencies (Ubuntu)
       if: matrix.os == 'ubuntu-latest'
       run: |
@@ -32,12 +37,11 @@ jobs:
         brew install openssl pkg-config
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
+    - name: Install maturin
+      run: pip install maturin[patchelf]
+
     - name: Build wheels
-      uses: PyO3/maturin-action@v1
-      with:
-        args: --release --out dist --features python
-        sccache: 'true'
-        manylinux: auto
+      run: maturin build --release --out dist --features python
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
