--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,9 @@ jobs:
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
     - name: Install maturin
-      run: pip install maturin[patchelf]
+      run: |
+        pip install --upgrade pip
+        pip install maturin[patchelf]
 
     - name: Build wheels
       run: maturin build --release --out dist --features python
