--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,11 +173,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-
     - name: Install system dependencies (Ubuntu)
       if: matrix.os == 'ubuntu-latest'
       run: |
@@ -190,13 +185,12 @@ jobs:
         brew install openssl pkg-config
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
-    - name: Install maturin
-      run: |
-        pip install --upgrade pip
-        pip install maturin[patchelf]
-
     - name: Build wheels
-      run: maturin build --release --out dist --features python
+      uses: PyO3/maturin-action@v1
+      with:
+        args: --release --out dist --features python
+        sccache: 'true'
+        manylinux: auto
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
