--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,85 +71,14 @@ jobs:
         name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}
         path: dist
 
-  build-sdist:
-    name: Build source distribution
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libssl-dev pkg-config
 
-    - name: Build sdist
-      uses: PyO3/maturin-action@v1
-      with:
-        command: sdist
-        args: --out dist --features python
-
-    - name: Upload sdist
-      uses: actions/upload-artifact@v4
-      with:
-        name: sdist
-        path: dist
-
-  build-binaries:
-    name: Build binaries on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-
-    - name: Install system dependencies (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libssl-dev pkg-config
-
-    - name: Install system dependencies (macOS)
-      if: matrix.os == 'macos-latest'
-      run: |
-        brew install openssl pkg-config
-        echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
-
-    - name: Build binary
-      run: cargo build --release
-
-    - name: Rename binary for release
-      run: |
-        if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-          cp target/release/annorefine annorefine-linux-x86_64
-        else
-          cp target/release/annorefine annorefine-macos-arm64
-        fi
-
-    - name: Upload binary to release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: ./annorefine-${{ matrix.os == 'ubuntu-latest' && 'linux-x86_64' || 'macos-arm64' }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload binary artifact (backup)
-      uses: actions/upload-artifact@v4
-      with:
-        name: binary-${{ matrix.os }}
-        path: annorefine-${{ matrix.os == 'ubuntu-latest' && 'linux-x86_64' || 'macos-arm64' }}
 
   release-github:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [build-wheels, build-sdist, build-binaries]
+    needs: [build-wheels, build-rust-binaries]
     if: startsWith(github.ref, 'refs/tags/')
     
     steps:
@@ -174,7 +103,7 @@ jobs:
   release-pypi:
     name: Release to PyPI
     runs-on: ubuntu-latest
-    needs: [build-wheels, build-sdist]
+    needs: [build-wheels]
     if: startsWith(github.ref, 'refs/tags/')
     environment:
       name: pypi
@@ -204,11 +133,8 @@ jobs:
             target: x86_64-unknown-linux-gnu
             name: annorefine-linux-x86_64
           - os: macos-latest
-            target: x86_64-apple-darwin
-            name: annorefine-macos-x86_64
-          - os: macos-latest
             target: aarch64-apple-darwin
-            name: annorefine-macos-aarch64
+            name: annorefine-macos-arm64
 
     steps:
     - uses: actions/checkout@v4
