--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*'  # Trigger on version tags like v2025.9.18
   workflow_dispatch:
 
 jobs:
@@ -80,23 +80,41 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-wheels, build-rust-binaries]
     if: startsWith(github.ref, 'refs/tags/')
-    
+    permissions:
+      contents: write  # Required for uploading release assets
+
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Download all artifacts
+
+    - name: Download binary artifacts
       uses: actions/download-artifact@v4
       with:
-        path: dist
+        pattern: annorefine-*
+        path: binaries
         merge-multiple: true
-        
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        files: dist/*
+        files: binaries/*
         generate_release_notes: true
         draft: false
         prerelease: false
+        fail_on_unmatched_files: true
+        make_latest: true
+        body: |
+          ## Installation
+
+          ### Python Package
+          ```bash
+          pip install annorefine
+          ```
+
+          ### Standalone Binaries
+          Download the appropriate binary for your platform from the assets below.
+
+          ## What's Changed
+          See the auto-generated release notes below for details.
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -110,14 +128,15 @@ jobs:
       url: https://pypi.org/p/annorefine
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-      
+
     steps:
-    - name: Download all artifacts
+    - name: Download wheel artifacts only
       uses: actions/download-artifact@v4
       with:
+        pattern: wheels-*
         path: dist
         merge-multiple: true
-        
+
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
