--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,16 @@
 name = "annorefine"
 version = "2025.9.18"
 edition = "2021"
-description = "Genome annotation refinement using RNA-seq data"
+description = "Genome annotation refinement toolkit using RNA-seq data"
 license = "MIT"
 repository = "https://github.com/nextgenusfs/annorefine"
 homepage = "https://github.com/nextgenusfs/annorefine"
-keywords = ["bioinformatics", "genomics", "annotation", "rna-seq"]
+keywords = ["bioinformatics", "genomics", "annotation", "rna-seq", "refinement"]
 categories = ["science", "command-line-utilities"]
+
+[[bin]]
+name = "annorefine"
+path = "src/main.rs"
 
 [lib]
 name = "annorefine"
@@ -15,15 +19,19 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.99"
+bincode = "1.3.3"
 bio = "2.3.0"
 chrono = { version = "0.4.42", features = ["serde"] }
 clap = { version = "4.5.47", features = ["derive"] }
 colored = "3.0.0"
 env_logger = "0.11.8"
 log = "0.4.28"
+rand = "0.8"
 rayon = "1.11.0"
 rust-htslib = "0.50.0"
+serde = { version = "1.0.217", features = ["derive"] }
 thiserror = "1.0.69"
+fastrand = "2.0"
 
 # Python bindings (optional)
 pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
