fix rust default test and mkdocs build

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libssl-dev pkg-config
+        sudo apt-get install -y libssl-dev pkg-config zlib1g-dev libbz2-dev liblzma-dev libcurl4-openssl-dev
     
     - name: Install Python dependencies
       run: |
