--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,11 +43,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install maturin
-        pip install mkdocs-material mkdocstrings[python]
-    
+        pip install mkdocs-material 'mkdocstrings[python]'
+
     - name: Build and install package
       run: |
-        maturin develop --release
+        maturin build --release --features python
+        pip install target/wheels/*.whl
     
     - name: Build documentation
       run: mkdocs build --strict
