--- a/.github/workflows/test-pypi.yml
+++ b/.github/workflows/test-pypi.yml
@@ -23,15 +23,27 @@ jobs:
             python-version: "3.12"
           - os: ubuntu-latest
             python-version: "3.13"
-          - os: macos-latest
+          # macOS ARM64 (Apple Silicon) - macos-14 and later
+          - os: macos-14
             python-version: "3.9"
-          - os: macos-latest
+          - os: macos-14
             python-version: "3.10"
-          - os: macos-latest
+          - os: macos-14
             python-version: "3.11"
-          - os: macos-latest
+          - os: macos-14
             python-version: "3.12"
-          - os: macos-latest
+          - os: macos-14
+            python-version: "3.13"
+          # macOS x86_64 (Intel) - macos-13
+          - os: macos-13
+            python-version: "3.9"
+          - os: macos-13
+            python-version: "3.10"
+          - os: macos-13
+            python-version: "3.11"
+          - os: macos-13
+            python-version: "3.12"
+          - os: macos-13
             python-version: "3.13"
 
     steps:
@@ -52,7 +64,7 @@ jobs:
         sudo apt-get install -y libssl-dev pkg-config
 
     - name: Install system dependencies (macOS)
-      if: matrix.os == 'macos-latest'
+      if: startsWith(matrix.os, 'macos-')
       run: |
         brew install openssl pkg-config
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
