--- a/.github/workflows/test-pypi.yml
+++ b/.github/workflows/test-pypi.yml
@@ -34,16 +34,16 @@ jobs:
             python-version: "3.12"
           - os: macos-14
             python-version: "3.13"
-          # macOS x86_64 (Intel) - macos-13
-          - os: macos-13
+          # macOS x86_64 (Intel) - macos-15-intel (last Intel image, supported until Aug 2027)
+          - os: macos-15-intel
             python-version: "3.9"
-          - os: macos-13
+          - os: macos-15-intel
             python-version: "3.10"
-          - os: macos-13
+          - os: macos-15-intel
             python-version: "3.11"
-          - os: macos-13
+          - os: macos-15-intel
             python-version: "3.12"
-          - os: macos-13
+          - os: macos-15-intel
             python-version: "3.13"
 
     steps:
