--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,15 @@ jobs:
           - os: ubuntu-latest
             python-version: "3.13"
           # macOS ARM64 (Apple Silicon) - macos-14 and later
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.9"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.10"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.11"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.12"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.13"
           # macOS x86_64 (Intel) - macos-15-intel (last Intel image, supported until Aug 2027)
           - os: macos-15-intel
@@ -74,6 +74,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install maturin[patchelf]
 
+    - name: Build Rust binary for wheel
+      run: python build.py
+
     - name: Build wheel
       run: maturin build --release --out dist --features python
 
@@ -82,9 +85,6 @@ jobs:
       with:
         name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}
         path: dist
-
-
-
 
 
   release-github:
@@ -163,7 +163,7 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             name: annorefine-linux-x86_64
-          - os: macos-14
+          - os: macos-latest
             target: aarch64-apple-darwin
             name: annorefine-macos-arm64
           - os: macos-15-intel
