--- a/.github/workflows/test-pypi.yml
+++ b/.github/workflows/test-pypi.yml
@@ -24,15 +24,15 @@ jobs:
           - os: ubuntu-latest
             python-version: "3.13"
           # macOS ARM64 (Apple Silicon) - macos-14 and later
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.9"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.10"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.11"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.12"
-          - os: macos-14
+          - os: macos-latest
             python-version: "3.13"
           # macOS x86_64 (Intel) - macos-15-intel (last Intel image, supported until Aug 2027)
           - os: macos-15-intel
@@ -74,6 +74,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install maturin[patchelf]
 
+    - name: Build Rust binary for wheel
+      run: python build.py
+
     - name: Build wheel
       run: maturin build --release --out dist --features python
 
@@ -110,7 +113,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, macos-15-intel]
         python-version: ['3.9', '3.11', '3.13']
         
     steps:
