--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "annorefine"
-version = "2025.12.31"
+version = "2025.12.32"
 description = "Genome annotation refinement using RNA-seq data"
 authors = [
     {name = "Jon Palmer", email = "nextgenusfs@gmail.com"},
@@ -50,6 +50,7 @@ dev = [
 features = ["pyo3/extension-module", "python"]
 python-source = "python"
 module-name = "annorefine._annorefine"
+data = "annorefine.data"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
