--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,22 +7,38 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-wheels:
-    name: Build wheels on ${{ matrix.os }}
+  build-wheels-linux:
+    name: Build Linux wheels
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Build wheels in manylinux container
+      uses: PyO3/maturin-action@v1
+      with:
+        target: x86_64
+        manylinux: auto
+        args: --release --out dist --features python -i python${{ matrix.python-version }}
+        before-script-linux: |
+          # Build the Rust binary inside the container
+          python build.py || true
+
+    - name: Upload wheels
+      uses: actions/upload-artifact@v4
+      with:
+        name: wheels-linux-py${{ matrix.python-version }}
+        path: dist
+
+  build-wheels-macos:
+    name: Build macOS wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            python-version: "3.9"
-          - os: ubuntu-latest
-            python-version: "3.10"
-          - os: ubuntu-latest
-            python-version: "3.11"
-          - os: ubuntu-latest
-            python-version: "3.12"
-          - os: ubuntu-latest
-            python-version: "3.13"
           # macOS ARM64 (Apple Silicon) - macos-14 and later
           - os: macos-latest
             python-version: "3.9"
@@ -57,14 +73,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install system dependencies (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libssl-dev pkg-config
-
     - name: Install system dependencies (macOS)
-      if: startsWith(matrix.os, 'macos-')
       run: |
         brew install openssl pkg-config
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
@@ -72,21 +81,13 @@ jobs:
     - name: Install maturin
       run: |
         python -m pip install --upgrade pip
-        python -m pip install maturin[patchelf]
+        python -m pip install maturin
 
     - name: Build Rust binary for wheel
       run: python build.py
 
     - name: Build wheel
-      run: |
-        if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-          # Use manylinux_2_17 for maximum compatibility (GLIBC 2.17 from 2012)
-          # This makes wheels compatible with Ubuntu 16.04+, Debian 9+, RHEL 7+, etc.
-          maturin build --release --out dist --features python --manylinux 2_17
-        else
-          # macOS doesn't use manylinux tags
-          maturin build --release --out dist --features python
-        fi
+      run: maturin build --release --out dist --features python
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
@@ -98,7 +99,7 @@ jobs:
   release-github:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [build-wheels, build-rust-binaries]
+    needs: [build-wheels-linux, build-wheels-macos, build-rust-binaries]
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write  # Required for uploading release assets
@@ -141,7 +142,7 @@ jobs:
   release-pypi:
     name: Release to PyPI
     runs-on: ubuntu-latest
-    needs: [build-wheels]
+    needs: [build-wheels-linux, build-wheels-macos]
     if: startsWith(github.ref, 'refs/tags/')
     environment:
       name: pypi
