--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,14 @@ jobs:
         manylinux: auto
         args: --release --out dist --features python -i python${{ matrix.python-version }}
         before-script-linux: |
+          # Install OpenSSL development files in the manylinux container
+          yum install -y openssl-devel perl-IPC-Cmd
           # Build the Rust binary inside the container
           python build.py || true
+        rust-toolchain: stable
+      env:
+        # Tell openssl-sys to use the system OpenSSL instead of building from source
+        OPENSSL_NO_VENDOR: "1"
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
